# maco

./: .gitignore  README.md  main.py  pyproject.toml
benchmarks/: benchmark_inference.py  benchmark_overlap.py
docs/: api_design.md  architecture.md  benchmark_results.md  flashoverlap_learnings.md  mirage_learnings.md  mirage_principles.md  parallelkittens_learnings.md
examples/: benchmark_all_to_all.py  benchmark_nccl_2gpu.py  benchmark_overlap.py  benchmark_vllm_comparison.py  example_taskgraph_basic.py  persistent_kernel_demo.py  simple_allreduce.py  tensor_parallel.py  test_all_to_all_determinism.py  test_all_to_all_overlap.py  test_maco_all_to_all.py  test_nvshmem_allreduce.py  test_overlap_attention.py  test_overlap_simple.py  test_raw_all_to_all.py  test_real_overlap.py  test_sm_scheduler.py  test_task_graph.py  validate_qwen3.py
maco/: __init__.py  config.py
maco/comm/: __init__.py  nccl_backend.py  nccl_ops.py  nvshmem_backend.py  patterns.py  process_group.py  scheduler.py
maco/core/: __init__.py  context.py  sm_manager.py  tensor_registry.py
maco/csrc/: maco_atoms.cuh  maco_kernel.cu  maco_scheduler.cuh  maco_types.h  maco_worker.cuh  nvshmem_ops.cu  setup.py  setup_sm.py
maco/overlap/: __init__.py  manager.py
maco/sync/: __init__.py  signal_wait.py  stream_manager.py
maco/task_graph/: __init__.py  exceptions.py  overlap_scheduler.py  runtime.py  validation.py
tests/: __init__.py  conftest.py  test_comm.py  test_overlap.py  test_runtime.py  test_sync.py  test_taskgraph.py  test_validation.py
