[project]
name = "maco"
version = "0.1.0"
description = "Multi-GPU Async Communication Optimizer - Optimizing multi-GPU communication with explicit SM control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maco"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
